--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -11,6 +11,9 @@
 	"subtitle": {
 		"message": "Регулятор громкости вкладки"
 	},
+	"noAudibleTabs": {
+		"message": "Нет вкладок с активным аудио"
+	},
 	"volumeWarning": {
 		"message": "Предупреждение: Высокая громкость может повредить слух."
 	},
