--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -14,6 +14,9 @@
 	"noAudibleTabs": {
 		"message": "Нет вкладок с активным аудио"
 	},
+	"audibleTabs": {
+		"message": "Сейчас звук играет на вкладках:"
+	},
 	"volumeWarning": {
 		"message": "Предупреждение: Высокая громкость может повредить слух."
 	},
