--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1,14 +1,17 @@
 {
-  "extensionName": {
+  "extName": {
     "message": "Сонӣ | Регулятор громкости вкладок"
   },
-	"extensionDescription": {
+	"shortDesc": {
 		"message": "Управляйте громкостью текущей вкладки от 0% до 500%."
+	},
+	"storeDesc": {
+		"message": "Расширение позволяет регулировать громкость активной вкладки от 0% до 500%, а так же видеть список вкладок, в которых воспроизводится звук.\n\n\n**Нюансы**\n\n— Может потребоваться перезагрузка целевой страницы после установки расширения.\n— Работает не со всеми вариантами предоставления медиа на страницах (например, музыка ВКонтакте или Spotify)."
 	},
   "title": {
     "message": "Сонӣ"
   },
-	"subtitle": {
+	"subTitle": {
 		"message": "Регулятор громкости вкладки"
 	},
 	"noAudibleTabs": {
