--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -26,6 +26,9 @@
 	"createdBy": {
 		"message": "от"
 	},
+	"authorInflected": {
+		"message": "Ялла Нкардаз"
+	},
 	"author": {
 		"message": "Ялла Нкардаз"
 	}
