--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -26,7 +26,10 @@
   "createdBy": {
     "message": "par"
   },
-  "author": {
+  "authorInflected": {
     "message": "Yalla Nkardaz"
-  }
+  },
+	"author": {
+		"message": "Yalla Nkardaz"
+	}
 }
