--- a/_locales/kk/messages.json
+++ b/_locales/kk/messages.json
@@ -26,7 +26,10 @@
 	"createdBy": {
 		"message": ""
 	},
-	"author": {
+	"authorInflected": {
 		"message": "Ялла Нкардаздан"
+	},
+	"author": {
+		"message": "Ялла Нкардаз"
 	}
 }
