--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -26,6 +26,9 @@
 	"createdBy": {
 		"message": "de"
 	},
+	"authorInflected": {
+		"message": "Yalla Nkardaz"
+	},
 	"author": {
 		"message": "Yalla Nkardaz"
 	}
