--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -26,7 +26,10 @@
 	"createdBy": {
 		"message": "від"
 	},
-	"author": {
+	"authorInflected": {
 		"message": "Ялли Нкардаз"
+	},
+	"author": {
+		"message": "Ялла Нкардаз"
 	}
 }
