--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -26,7 +26,10 @@
   "createdBy": {
     "message": "od"
   },
-  "author": {
+  "authorInflected": {
     "message": "Yalla Nkardaz"
-  }
+  },
+	"author": {
+		"message": "Yalla Nkardaz"
+	}
 }
