--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -26,7 +26,10 @@
 	"createdBy": {
 		"message": "от"
 	},
-	"author": {
+	"authorInflected": {
 		"message": "Яллы Нкардаз"
+	},
+	"author": {
+		"message": "Ялла Нкардаз"
 	}
 }
