--- a/_locales/sr/messages.json
+++ b/_locales/sr/messages.json
@@ -26,7 +26,10 @@
 	"createdBy": {
 		"message": "од"
 	},
-	"author": {
+	"authorInflected": {
 		"message": "Јалле Нкардаз"
+	},
+	"author": {
+		"message": "Јалла Нкардаз"
 	}
 }
